2008-07-12 Riccardo Mottola <rmottola@users.sf.net>
	
	* TerminalView.m: Remove font metric hack for xlib and art backend
	(after fixes in backend, requires backend date 12 July 2008).
	Patch by Fred Kiefer <FredKiefer@gmx.de>