@@ -1,3 +1,11 @@
+2009-01-02 Riccardo Mottola <rmottola@users.sf.net>
+	
+	* TerminalView.m: OpenBSD portability
+
+2009-01-01 Riccardo Mottola <rmottola@users.sf.net>
+	
+	* TerminalView.m: ForkPty and OpenPty replacements
+
 2008-07-12 Riccardo Mottola <rmottola@users.sf.net>
 	
 	* TerminalView.m: Remove font metric hack for xlib and art backend
